Update HTML Main Page.html

--- a/HTML Main Page.html
+++ b/HTML Main Page.html
@@ -111,7 +111,7 @@ a:active {
 }
 </style>
 
-<p> If you want more information, you can learn more about different types of snakes, and which snakes make the best pets, <a href="https://www.petplace.com/article/reptiles/general/your-guide-to-selecting-a-snake/" target="_blank">here.</a> 
+<p> If you want more information, you can learn more about different types of snakes, and which snakes make the best pets, click <a href="https://www.petplace.com/article/reptiles/general/your-guide-to-selecting-a-snake/" target="_blank">here.</a> 
 
 <style>
 img {
